# rectset

./: CITATION.cff  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yaml  test.yaml
src/: Analytic_rectangle_electrode.nb
tests/: test_rectset.py
