[metadata]
name = rectset
version = 1.0.0
author = ['Carmelo Mordini']
author_email = carmelo.mordini@gmail.com
license = MIT
description = Analytical potentials for rectangle electrodes in a surface ion trap
url = https://github.com/carmelom/rectset
long_description = file: README.md

[options]
package_dir=
    =src
packages=find:
install_requires =
    numpy

[options.packages.find]
where=src